tests/_resources/error_gcns/E006_missing_expression_after_operator.expected
error[E001]: Missing semicolon. Found ''P''
  --> E006_missing_expression_after_operator.gcn:6:9
     |
   4 |     identities
   5 |     {
   6 |         P[] = D[] + ;
     |         ^ missing semicolon
   7 |     };
   8 | };
     |
   = note: Add ';' at the end of the statement
   = note: Check that each equation ends with ';'
   = note: Check that each block component ends with '};'
