tests/_resources/error_gcns/E006_missing_expression_after_operator.gcn
# Error: Missing expression after + operator
block MARKET
{
    identities
    {
        P[] = D[] + ;
    };
};
